--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+*.js linguist-language=C#
+
 FabricUserApiDemo/WebPages/* linguist-documentation
 
 FabricUserApiDemo/DefinitionTemplates/WebPages/* linguist-documentation
